# rely-project

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.cursor/skills/dev_environment/: SKILL.md
.cursor/skills/dev_environment/scripts/: dev_down.sh  dev_up.sh  run_backend.sh  run_frontend.sh  run_tunnel.sh  update_retell_webhook.py
alembic/versions/: 258d0bfd479b_rename_calls_recording_url_column.py  5c52530e7c76_make_call_attempt_fields_nullable.py  9294693f4272_create_patients_table.py  a17215be68c2_convert_ids_to_uuid_with_defaults.py  b7e4c2a91f05_add_cascade_delete_on_calls_patient_fk.py  cd4a0bd328db_create_calls_table.py  d4c8f6a2b901_create_transcripts_table.py
app/: db.py  models.py  schemas.py
app/api/: calls.py  patient_records.py  router.py  webhooks.py  websocket.py
app/logic/: call_manager.py  patient_manager.py  transcript_manager.py
docs/: functional_reqs.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CallHistory.tsx  LiveTranscript.tsx  PatientRow.tsx  PatientTable.tsx
scripts/: seed_demo.py
