[project]
name = "rely-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "retell-sdk>=5.53.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
